--- a/CSS-Intermediate/Challenge-Three/Exercise-1/index.html
+++ b/CSS-Intermediate/Challenge-Three/Exercise-1/index.html
@@ -3,9 +3,29 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Document</title>
+	<title>Mock 1</title>
+	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-	
-</body>
+	<div class="container">
+	     <div class="left-pane"></div>
+	      <div class="right-pane"></div>
+	    </div>
+
+	    <div class="container">
+	        <div class="left-pane"></div>
+	        <div class="right-pane"></div>
+	    </div>
+	    <div class="container">
+	    	<div class="left-pane">
+	    	</div>
+	    	<div class="right-pane">
+	    	</div>
+
+	    </div>
+
+	    <div class="container">
+	        <footer></footer>
+	    </div>
+	</body>
 </html>
