--- a/CSS-Intermediate/Challenge-Three/Exercise-2/index.html
+++ b/CSS-Intermediate/Challenge-Three/Exercise-2/index.html
@@ -2,10 +2,13 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Document</title>
+	<title>Mock 2</title>
+	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-	
+	<div class="heading"></div>
+	<div class="col col-left"></div>
+	<div class="col col-mid"></div>
+	<div class="col col-right"></div>
 </body>
 </html>
