--- a/CSS-Intermediate/Challenge-Three/Exercise-3/index.html
+++ b/CSS-Intermediate/Challenge-Three/Exercise-3/index.html
@@ -2,10 +2,26 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Document</title>
+	<title>Mock 3</title>
+	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-	
+	<div ="heading">
+	</div>
+
+	<section>
+		<div class="col .col-left">
+			<img src="img.jpeg">
+		</div>
+		<div class="col .col-mid">
+			<img src="img.jpeg">
+		</div>
+		<div class="col .col-right">
+			<img src="img.jpeg">
+		</div>
+	</section>
+		<div class="col .col-mid"></div>
+		<div class="col .col-right"></div>
+	<section>
 </body>
 </html>
