--- a/CSS-Intermediate/Challenge-Three/Exercise-3/index.html
+++ b/CSS-Intermediate/Challenge-Three/Exercise-3/index.html
@@ -6,22 +6,23 @@
 	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-	<div ="heading">
+	<div class="heading">
 	</div>
 
 	<section>
-		<div class="col .col-left">
+		<div class="col col-left">
 			<img src="img.jpeg">
 		</div>
-		<div class="col .col-mid">
+		<div class="col col-mid">
 			<img src="img.jpeg">
 		</div>
-		<div class="col .col-right">
+		<div class="col col-right">
 			<img src="img.jpeg">
 		</div>
 	</section>
-		<div class="col .col-mid"></div>
-		<div class="col .col-right"></div>
+		<div class="col col-mid"></div>
+		<div class="col col-right"></div>
+		<div class="col col-right"></div>
 	<section>
 </body>
 </html>
