--- a/CSS-Intermediate/Challenge-Three/Exercise-3/index.html
+++ b/CSS-Intermediate/Challenge-Three/Exercise-3/index.html
@@ -20,8 +20,8 @@
 			<img src="img.jpeg">
 		</div>
 	</section>
+		<div class="col col-left"></div>
 		<div class="col col-mid"></div>
-		<div class="col col-right"></div>
 		<div class="col col-right"></div>
 	<section>
 </body>
