--- a/Final-Project/Youtube-Clone/index.html
+++ b/Final-Project/Youtube-Clone/index.html
@@ -11,23 +11,23 @@
 <body>
 	<header class="header">
 		<div class="logo left">
-			<i id="menu" class="material-icons">menu</i>
+			<i id="menu" class="material-icons"><img src="menu-icon.png"></i>
 			<img src="https://www.freecodecamp.org/news/content/images/2022/01/yt-logo.png">
 		</div>
 
 		<div class="search center">
 			<form action="">
 				<input type="text" placeholder="Search" />
-				<button><i class="material-icons">search</i></button>
+				<button><i class="material-icons"><img src="search.jpg"></i></button>
 			</form>
-			<i class="material-icons mic">mic</i>
+			<i class="material-icons mic"><img src="mic.png"></i>
 		</div>
 
 		<div class="icons right">
-			<i class="material-icons">videocam</i>
+			<i class="material-icons"><img src="vcm.png"></i>
 			<i class="material-icons">apps</i>
-			<i class="material-icons">notification</i>
-			<i class="material-icons display-this">account_circle</i>
+			<i class="material-icons"><img src="notification.png"></i>
+			<i class="material-icons display-this"><img src="author-img.jpeg"></i>
 		</div>
 	</header>
 	<main>
